# bplustogether

./: .config.env  .example.config.env  .gitignore  README.md  database.env  docker-compose.yml  mysql.env  pgadmin.env  pgsql.env
bpapi/: README.rst  bptogether.db  pyproject.toml  settings.toml
bpapi/bpapi/: bptogether.db  format.sh  main-old.py  main.py
bpapi/bpapi/db/: crud.py  dbconfig.py
bpapi/bpapi/routers/: __init__.py  items.py  notes.py
bpapi/tests/: test_bpapi.py
docker/api/: Dockerfile
docker/service/: Dockerfile
nginx/: nginx.conf
