[tool.poetry]
name = "bpapi"
version = "0.1.0"
description = "B+ API"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
uvicorn = "^0.11.3"
loguru = "^0.4.1"
sqlalchemy = "^1.3.16"
databases = "^0.3.1"
pydantic = "^1.5.1"
dynaconf = "^2.2.3"
aiosqlite = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
